fix: table action row alignment

--- a/src/files-and-videos/index.scss
+++ b/src/files-and-videos/index.scss
@@ -12,6 +12,10 @@
 
     .pgn__data-table-status-bar {
       padding: 12px 0;
+
+      .pgn__data-table-actions-left {
+        margin-top: 16px;
+      }
     }
 
     .pgn__data-table-card-view {
